(lang dune 3.9)

(name htmx_tyxml)

(generate_opam_files true)

(source
 (github Alfagov/htmx_tyxml))

(authors "Lorenzo Pulcini")

(maintainers "Lorenzo Pulcini")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name htmx_tyxml)
 (synopsis "Tyxml bindings for htmx attributes")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
